[gd_scene load_steps=2 format=3 uid="uid://dylnam6cwbvcg"]

[ext_resource type="Script" path="res://views/loadout_menu/selectable_tile/selectable_tile.gd" id="1_r47wr"]

[node name="SelectableTile" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_r47wr")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_right = 40.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="AnimationTimer" type="Timer" parent="."]

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
